deploy/edge/ingressroute-template.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: api-canary-pr-PLACEHOLDER
  namespace: platform
spec:
  entryPoints: [ websecure ]
  routes:
    - match: Host(`api.dev.example.com`) && PathPrefix(`/`) && Headers(`X-Canary`, `PLACEHOLDER`)
      kind: Rule
      services:
        - name: api
          namespace: api-canary-pr-PLACEHOLDER
          port: 80
  tls: {}
